--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.1",
     "request-promise": "^4.2.6",
-    "twilio": "~4.6.0"
+    "twilio": "^3.66.0"
   },
   "devDependencies": {
     "concurrently": "^3.6.1"
